<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ALARMMATH</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_math_me_awake_math">ALARMMATH</string>
    <string name="answer">ANSWER: </string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="enter">\u2714</string>
    <string name="filler">Questions go here</string>
    <string name="clear">\u232b</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_alarm_btn">+</string>
    <string name="edit_alarm_sun">Sun</string>
    <string name="edit_alarm_mon">Mon</string>
    <string name="edit_alarm_tue">Tue</string>
    <string name="edit_alarm_wed">Wed</string>
    <string name="edit_alarm_thu">Thu</string>
    <string name="edit_alarm_fri">Fri</string>
    <string name="edit_alarm_sat">Sat</string>
    <string name="edit_alarm_cancel">Cancel</string>
    <string name="edit_alarm_save">Save</string>
    <string name="edit_alarm_delete">Delete</string>
    <string name="edit_alarm_answers_txt">Answers Required:</string>
    <string name="edit_alarm_answers_inc_btn">+</string>
    <string name="edit_alarm_answers_dec_btn">-</string>
    <string name="edit_alarm_answers_num">1</string>
    <string name="edit_alarm_heading_name">ALARM NAME</string>
    <string name="edit_alarm_heading_time">ALARM TIME</string>
    <string name="edit_alarm_heading_days">ALARM DAY</string>
    <string name="edit_alarm_default_name">DEFAULT NAME</string>
    <string name="edit_alarm_heading_num_answers">NO. OF PROBLEMS TO SOLVE</string>
    <string name="edit_alarm_heading_tone">ALARM TONE</string>
    <string name="edit_alarm_tone_string">(TOUCH TO SELECT)</string>

</resources>
