<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:orientation="vertical"
        android:weightSum="18" >

        <TextView
            android:background="@android:color/black"
            android:id="@+id/edit_alarm_name_label"
            android:text="@string/edit_alarm_heading_name"
            android:layout_weight="1"
            style="@style/heading"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_marginBottom="@dimen/small_margin"
            >


            <EditText
                android:id="@+id/edit_alarm_name"
                android:layout_width="0dp"
                android:inputType="textNoSuggestions"
                tools:ignore="NestedWeights"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="bottom"
                android:singleLine="true"
                android:text="@string/edit_alarm_default_name"
                android:textSize="@dimen/normal_text_size" />

            <Button
                android:id="@+id/edit_alarm_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/red_keypad"
                android:padding="10dp"
                android:text="@string/edit_alarm_delete"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>



        <TextView
            android:background="@android:color/black"
            android:id="@+id/edit_alarm_time_label"
            android:text="@string/edit_alarm_heading_time"
            android:layout_weight="1"
            style="@style/heading"
            android:layout_marginBottom="@dimen/small_margin"/>

        <TimePicker
            android:id="@+id/edit_alarm_time_picker"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginBottom="@dimen/small_margin" />

        <TextView
            android:background="@android:color/black"
            android:id="@+id/edit_alarm_days_label"
            android:text="@string/edit_alarm_heading_days"
            android:layout_weight="1"
            style="@style/heading"/>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:stretchColumns="*"
            android:gravity="center"
            android:layout_marginBottom="@dimen/small_margin" >

            <TableRow>
                <CheckBox
                    android:id="@+id/edit_alarm_repeat_sun"
                    style="@style/edit_alarm_checkbox"
                    android:text="@string/edit_alarm_sun"
                    android:textColor="@android:color/black" />

                <CheckBox
                    android:textColor="@android:color/black"
                    android:id="@+id/edit_alarm_repeat_mon"
                    style="@style/edit_alarm_checkbox"
                    android:text="@string/edit_alarm_mon"/>

                <CheckBox
                    android:id="@+id/edit_alarm_repeat_tue"
                    style="@style/edit_alarm_checkbox"
                    android:text="@string/edit_alarm_tue"
                    android:textColor="@android:color/black"
                    />

                <CheckBox
                    android:textColor="@android:color/black"
                    android:id="@+id/edit_alarm_repeat_wed"
                    style="@style/edit_alarm_checkbox"
                    android:text="@string/edit_alarm_wed"/>
            </TableRow>
            <TableRow>

                <CheckBox
                    android:textColor="@android:color/black"
                    android:id="@+id/edit_alarm_repeat_thu"
                    style="@style/edit_alarm_checkbox"
                    android:text="@string/edit_alarm_thu"/>

                <CheckBox
                    android:textColor="@android:color/black"
                    android:id="@+id/edit_alarm_repeat_fri"
                    style="@style/edit_alarm_checkbox"
                    android:text="@string/edit_alarm_fri"/>

                <CheckBox
                    android:textColor="@android:color/black"
                    android:id="@+id/edit_alarm_repeat_sat"
                    style="@style/edit_alarm_checkbox"
                    android:text="@string/edit_alarm_sat"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:background="@android:color/black"
            android:id="@+id/edit_alarm_num_answers_label"
            android:text="@string/edit_alarm_heading_num_answers"
            android:layout_weight="1"
            style="@style/heading"/>

        <NumberPicker
            android:id="@+id/edit_alarm_num_picker"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_weight="5"/>




        <TextView
            android:background="@android:color/black"
            android:id="@+id/edit_alarm_tone_label"
            android:text="@string/edit_alarm_heading_tone"
            android:layout_weight="1"
            style="@style/heading"/>



        <TextView
            android:background="@android:color/black"
            android:id="@+id/edit_alarm_tone_select"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:textSize="@dimen/heading_text_size"
            android:textColor="@color/gray"
            android:text="@string/edit_alarm_tone_string"
            android:layout_weight="2"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginBottom="@dimen/small_margin"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginBottom="@dimen/small_margin">

            <Button
                android:id="@+id/edit_alarm_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/red_keypad"
                android:padding="10dp"
                android:text="@string/edit_alarm_cancel"
                android:textSize="@dimen/normal_text_size"/>

            <Button
                android:id="@+id/edit_alarm_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/green_keypad"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                android:text="@string/edit_alarm_save"
                android:textSize="@dimen/normal_text_size"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>